# vector_prolog

./: .gitignore  README.md  pyproject.toml
tests/: test_prolog_vectorbase.py
vector_prolog/: vectorbase.py
